--- a/_posts/2023-06-13-Git笔记.md
+++ b/_posts/2023-06-13-Git笔记.md
@@ -1,16 +1,32 @@
 ---
 layout: post
-title: "Git笔记"
+title: "Git笔记和ssh密钥绑定"
 date: 2023-05-25 
 description: "用好github，让代码好管理"
 tag: git
 ---   
 
+### 1.1告诉git或cmder等终端你是谁
+**绑定id**`$ git config --global user.name "Your Name"`
 
-### 版本回退
-**回退到上一个版本** `git reset --hard HEAD^`
-**回退到指定版本**`git reset --hard commit`
-### 工作区和暂存区
+**绑定邮箱**`$ git config --global user.email "email@example.com"`
+
+**检查是否存在 SSH Key**`cd ~/.ssh` `ls`
+
+**创建新的ssh key** `ssh-keygen -t rsa -C "xxx@yeah.net"` 
+
+**获取ssh key公钥内容（id_rsa.pub）** `cat ~/.ssh/id_rsa.pub`
+
+**验证是否设置成功** `ssh -T git@github.com`
+
+### 1.2git初始化
+`git init` 把某个目录变成Git可以管理的仓库`
+
+`git add <文件名>` 用命令git add告诉Git，把文件添加到仓库Git添加
+
+
+
+### 1.3工作区和暂存区(提交到GitHub上)
 **工作区** 电脑里能看到的目录 工作区里隐藏的.git不是工作区 他是Git版本库
 Git的版本库里存了很多东西，其中最重要的就是称为stage（或者叫index）的暂存区，还有Git为我们自动创建的第一个分支master，以及指向master的一个指针叫HEAD。
 **暂存区** 在我们把文件往版本库里添加的时候，是分两布执行的。
@@ -19,12 +35,16 @@ Git的版本库里存了很多东西，其中最重要的就是称为stage（或
 因为我们创建Git版本库时，Git自动为我们创建了唯一一个master分支，所以，现在，git commit就是往master分支上提交更改。
 
 你可以简单理解为，需要提交的文件修改通通放到暂存区，然后，一次性提交暂存区的所有修改。
-### 撤销修改
+
+### 1.4版本回退
+**回退到上一个版本** `git reset --hard HEAD^`
+**回退到指定版本**`git reset --hard commit`
+### 1.5撤销修改
 `git checkout -- filename`把filename文件在工作区的修改全部撤销,当然，这里有两种情况,第一种是 你还没有把修改的文件添加到暂存区 这时候你`git checkout -- filename`会撤销当前对文件所有的修改，回到和版本库一模一样的状态 第二种是 你修改完后提交到了暂存区，然后又做了修改，现在，你再执行`git checkout -- filename`这个命令的时候就会回到添加到暂存区后的状态
 庆幸的是，在commit之前，你发现了这个问题。用git status查看一下，修改只是添加到了暂存区，还没有提交,想让暂存区的文件撤销修改，重新回到工作区，你只要输入`git reset HEAD filename`就可以让文件回到工作区
-### 删除文件
+### 1.5删除文件
 `git rm filename`
-### 远程仓库
+### 1.7远程仓库
 + `git remote add origin 远程地址`关联远程仓库
 + `git push -u origin master`把本地的master分支推送到远程origin上的master分支上
 + `git clone 远程地址`把远程仓库的代码克隆到本地
