--- a/_posts/2023-06-14-小兔鲜.md
+++ b/_posts/2023-06-14-小兔鲜.md
@@ -1,2 +1,42 @@
-### 小兔鲜儿
-**借用了vue3**
+---
+layout: post
+title: "小兔鲜儿"
+date: 2023-06-14 
+description: "一个功能很好在线购物平台"
+tag: project
+---   
+###  1.1  兔鲜儿介绍
+**小兔鲜儿采用vue3为框架，实现了用户注册和登录，商品浏览和搜索，商品详细信息查询，购物车管理，订单管理，支付和结算等功能在线购物平台，为了良好实现这些功能，采用vite, axios，Pinia，vueuse等多方库的导入，其中v-model实现的懒加载模式，全局状态管理，高性能渲染，其最大优点是引入了组合式api，代码可以更灵活进行复用，逻辑关注点分离......**
+
+###  1.2  项目起步
+  + **创建项目**   `npm init vue@latest`
+
+ + **安装axios**   `npm i axios`
+
+ + **运行**   `npm run dev`
+
+ + **其他导入看官方文档**
+
+###  1.3  使用到的技术
+
++ [axios](https://axios-http.com/zh)是一个基于 Promise 的 HTTP 客户端，用于浏览器和 Node.js。它是一个流行的第三方库，用于进行网络请求并处理响应数据。
+
++ [Pinia](https://pinia.vuejs.org/zh)是一个基于 Vue 3 的状态管理库，它提供了一种简洁而优雅的方式来管理和共享应用程序的状态。Pinia 源自 Vuex
+
++ [VueUse](https://vueuse.org/)是一个基于 Vue.js 的功能性库，提供了许多实用的自定义 Vue 组合函数，可以用于增强 Vue.js 应用程序的功能和开发体验。
+
++ [Vuejs](https://cn.vuejs.org/)响应式数据绑定，组件化开发，生态系统和插件，指令和过滤器，虚拟 DOM，
+
++ [element+](https://element-plus.gitee.io/zh-CN/)是一个基于 Vue.js 的开源 UI 组件库，提供了丰富的可复用组件，用于快速构建漂亮、响应式的 Web 应用程序界面。
+
++ [vuepress](https://vuepress.vuejs.org/zh)是一个基于 Vue.js 的静态站点生成器，专注于帮助开发者快速构建漂亮、高性能的文档网站。它结合了 Vue.js 的组件化开发模式和 Markdown 的简洁语法，使得创建和维护文档变得简单而灵活。
+
++ [Pinia-Plugin](https://prazdevs.github.io/pinia-plugin-persistedstate/zh)用于增强和扩展 Pinia 状态管理库的功能。持久化状态，路由状态管理，跨标签页状态同步，DevTools 集成，插。件扩展性
+
++ [阿里图标](https://www.iconfont.cn/)
+
+###  1.4 问题咨询
+
+[GitCiris](https://github.com/GitCiris/GitCiris.github.org)
+
+qq:212181880
