--- a/_posts/2023-06-14-小兔鲜.md
+++ b/_posts/2023-06-14-小兔鲜.md
@@ -2,11 +2,11 @@
 layout: post
 title: "小兔鲜儿"
 date: 2023-06-14 
-description: "一个功能很好在线购物平台"
+description: "一个功能齐全在线购物平台"
 tag: project
 ---   
-###  1.1  兔鲜儿介绍
-**小兔鲜儿采用vue3为框架，实现了用户注册和登录，商品浏览和搜索，商品详细信息查询，购物车管理，订单管理，支付和结算等功能在线购物平台，为了良好实现这些功能，采用vite, axios，Pinia，vueuse等多方库的导入，其中v-model实现的懒加载模式，全局状态管理，高性能渲染，其最大优点是引入了组合式api，代码可以更灵活进行复用，逻辑关注点分离......**
+###  1.1  小兔鲜儿介绍
+**小兔鲜儿采用vue3为框架，实现了用户注册和登录，商品浏览和搜索，商品详细信息查询，购物车管理，订单管理，支付和结算等功能在线购物平台，为了良好实现这些功能，采用vite, axios，Pinia，vueuse等多方库的导入，其中v-model实现的懒加载模式;全局状态管理;高性能渲染;其最大优点是引入了组合式api，代码可以更灵活进行复用，逻辑关注点分离......**
 
 ###  1.2  项目起步
   + **创建项目**   `npm init vue@latest`
@@ -15,9 +15,15 @@ tag: project
 
  + **运行**   `npm run dev`
 
+ + **安装sass**  `npm i sass -D`
+
+ + **路由导入**  `npm install vue-router`
+
+ +  **时间格式化dayjs**  `npm install dayjs --save`
+
  + **其他导入看官方文档**
 
-###  1.3  使用到的技术
+###  1.3  使用到的技术及链接
 
 + [axios](https://axios-http.com/zh)是一个基于 Promise 的 HTTP 客户端，用于浏览器和 Node.js。它是一个流行的第三方库，用于进行网络请求并处理响应数据。
 
@@ -37,6 +43,6 @@ tag: project
 
 ###  1.4 问题咨询
 
-[GitCiris](https://github.com/GitCiris/GitCiris.github.org)
+[GitCiris](https://github.com/GitCiris)
 
-qq:212181880
+QQ:  212181880
